# django-workshop

./: .replit  Pipfile  pyproject.toml
todoproject/: manage.py
todoproject/todoproject/: settings.py  urls.py
todoproject/todos/: forms.py  models.py  serializers.py  urls.py  views.py
todoproject/todos/migrations/: 0001_initial.py  0002_auto_20210708_1937.py  0003_collection_owner.py  0004_alter_todo_collection.py
todoproject/todos/templates/: base.html  index.html
