[tool.poetry]
name = "repl_python3_django-workshop"
version = "0.1.0"
description = ""
authors = ["eigenmannmartin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-csp = "^3.7"
django-rest-framework = "^0.1.0"
django-filter = "^2.4.0"
cheminventory = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
